# youflow

./: .gitignore  .replit  ai_insights.py  app.py  check_projects.py  config.py  data_processor.py  debug_gemini_context.json  email_reporter.py  fetch_raw_data.py  generate_daily_report.py  pyproject.toml  requirements.txt  rest-api-overview.md  run_report.py  utils.py  visualizations.py  voice_generator.py  voice_summary.py  youtrack_api.py
.streamlit/: config.toml
attached_assets/: Pasted--CORE-SYSTEM-ARCHITECTURE-We-re-building-a-daily-reporting-system-that-extracts-comprehensive-YouT-1743574784013.txt  Pasted--DATA-OPTIMIZATION-APPROACH-Our-YouTrack-Gemini-integration-will-implement-a-focused-data-strategy-1743601037477.txt  Pasted--Google-AI-for-Developers-Models-Solutions-Code-assistance-Showcase-Community-English-Sign-in-G-1743601427285.txt  Pasted--PROJECT-BACKGROUND-This-initiative-aims-to-transform-how-we-manage-and-report-on-the-Mercedes-pro-1743574212267.txt  Pasted--YouTrack-Project-0-9-Total-Issues-1658-Open-Issues-58-Resolved-Issues-1600-Issue-Status-Breakdo-1743601352586.txt  Pasted--YouTrack-Project-0-9-Total-Issues-1658-Open-Issues-58-Resolved-Issues-1600-Issue-Status-Breakdo-1743602432356.txt  Pasted--YouTrack-Project-0-9-Total-Issues-1658-Open-Issues-58-Resolved-Issues-1600-Issue-Status-Breakdo-1743603438450.txt  Pasted-Alright-let-s-go-deep-into-every-GET-endpoint-that-the-Postman-collection-offers-for-data-extractio-1743603350953.txt  (+11 more)
data/: processed_data.json
pages/: dashboard.py  data_explorer.py  reports.py  settings.py
(+6 files in other folders)
